test/arrays/compilerErrors/array-generic-type.good
array-generic-type.chpl:4: error: syntax error near ']'
array-generic-type.chpl:8: error: syntax error near ']'
